[project]
name = "retrievalattention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "bs4==0.0.2",
    "evaluate==0.4.3",
    "flash-attn==2.7.3",
    "flashinfer-python==0.2.4",
    "fuzzywuzzy==0.18.0",
    "html2text==2024.2.26",
    "jieba==0.42.1",
    "ninja==1.11.1.4",
    "packaging==25.0",
    "pybind11==2.12.0",
    "rouge==1.0.1",
    "rouge-score==0.1.2",
    "scipy==1.13.0",
    "termcolor>=3.2.0",
    "torch==2.5.1",
    "tqdm>=4.67.1",
    "transformers==4.49.0",
    "vllm==0.6.5",
    "weighted-flash-decoding",
    "wonderwords==2.2.0",
]

[[tool.uv.index]]
url = "https://flashinfer.ai/whl/cu124/torch2.5/"

[tool.uv.sources]
weighted-flash-decoding = { git = "https://github.com/Starmys/flash-attention.git", rev = "weighted" }
